@@ -83,8 +83,8 @@ qsub \- submit pbs job
 .SH SYNOPSIS
 qsub [\-a date_time] [\-A account_string] [\-b secs] [\-c checkpoint_options]
 [\-C directive_prefix]
-[\-d path] [\-D path] [\-e path] [\-E node exclusive] [\-f] [\-h] [\-I] [\-j join] 
-[\-k keep] [\-l resource_list] [\-m mail_options] [\-M user_list] [\-N name] 
+[\-d path] [\-D path] [\-e path] [\-f] [\-h] [\-I] [\-j join] [\-k keep]
+[\-l resource_list] [\-m mail_options] [\-M user_list] [\-n node exclusive] [\-N name] 
 [\-o path] [\-p priority] [\-P proxy_username[:group]]  [\-q destination] [\-r c]
 [\-S path_list] [\-t array_request] [\-T prologue/epilogue script_name] 
 [\-u user_list] [\-v variable_list] [\-V] [\-w] path 
@@ -385,10 +385,6 @@ job is submitted.
 This option sets the job attribute
 .At Error_Path .
 .Ig
-.IP "\-E" 8
-Specifies that the job has exclusive access to the nodes it is executing on. This is intended to be used in
-conjunction with a scheduler that enforces exclusive access, and it tells the cpuset to give the job access
-to all of that node's resources.
 .IP "\-f" 8
 Specifies that the job is fault tolerant. The
 .At fault_tolerant
@@ -596,6 +592,10 @@ The
 .At Mail_Users
 attribute is set to the argument.
 .Ig
+.IP "\-n" 8
+Specifies that the job has exclusive access to the nodes it is executing on. This is intended to be used in
+conjunction with a scheduler that enforces exclusive access, and it tells the cpuset to give the job access
+to all of that node's resources.
 .IP "\-N name " 8
 Declares a name for the job.
 The name specified may be up to and including 15 characters in length.
