@@ -1193,13 +1193,13 @@ int a_opt = FALSE;
 int b_opt = FALSE;
 int c_opt = FALSE;
 int e_opt = FALSE;
-int E_opt = FALSE;
 int f_opt = FALSE;
 int h_opt = FALSE;
 int j_opt = FALSE;
 int k_opt = FALSE;
 int l_opt = FALSE;
 int m_opt = FALSE;
+int n_opt = FALSE;
 int o_opt = FALSE;
 int p_opt = FALSE;
 int q_opt = FALSE;
@@ -2911,9 +2911,9 @@ int process_opts(
   char search_string[256];
 
 #if !defined(PBS_NO_POSIX_VIOLATION)
-#define GETOPT_ARGS "a:A:b:c:C:d:D:e:EfhIj:k:l:m:M:N:o:p:P:q:r:S:t:T:u:v:Vw:W:Xxz-:"
+#define GETOPT_ARGS "a:A:b:c:C:d:D:e:fhIj:k:l:m:M:nN:o:p:P:q:r:S:t:T:u:v:Vw:W:Xxz-:"
 #else
-#define GETOPT_ARGS "a:A:c:C:e:Ehj:k:l:m:M:N:o:p:q:r:S:u:v:VW:z"
+#define GETOPT_ARGS "a:A:c:C:e:hj:k:l:m:M:nN:o:p:q:r:S:u:v:VW:z"
 #endif /* PBS_NO_POSIX_VIOLATION */
 
   /* The following macro, together the value of passet (pass + 1) is used */
@@ -3256,17 +3256,6 @@ int process_opts(
 
         break;
 
-      case 'E':
-
-        if_cmd_line(E_opt)
-          {
-          E_opt = passet;
-          
-          set_attr(&attrib, ATTR_node_exclusive, "TRUE");
-          }
-
-        break;
-        
 #if !defined(PBS_NO_POSIX_VIOLATION)
       
       case 'f':
@@ -3580,6 +3569,17 @@ int process_opts(
             }
 
           set_attr(&attrib, ATTR_M, optarg);
+          }
+
+        break;
+
+      case 'n':
+
+        if_cmd_line(n_opt)
+          {
+          n_opt = passet;
+          
+          set_attr(&attrib, ATTR_node_exclusive, "TRUE");
           }
 
         break;
